<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/alpha4"
    tools:context="com.example.swathi.gameboggle.SecondScreen">


    <RadioGroup
        android:id="@+id/radioGroupDifficultyLevelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/radioEasyID"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:text="@string/Easy"
            android:checked="true"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioNormalID"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/Normal"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/radioDifficultID"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:text="@string/Difficult"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:text="Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSubmitSecScreenId"
        android:padding="20dp"
        android:background="@android:color/holo_blue_light"
        android:layout_marginTop="35dp"
        android:textSize="16sp"
        android:layout_below="@+id/radioGroupDifficultyLevelID" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_difficulty_level"
        android:id="@id/textViewChooseDifficulty"
        android:fontFamily="serif"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_above="@+id/radioGroupDifficultyLevelID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:textStyle="normal|bold" />

</RelativeLayout>
