<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.swathi.gameboggle.HelpScreen">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <RadioButton
            android:id="@+id/radioSingleHelp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="Single Player"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radioMultiHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MultiPlayer"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvSingleHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_text"
        android:textAlignment="inherit"
        android:textSize="18sp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/tvMultiHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_text_multiplayer"
        android:textAlignment="inherit"
        android:textSize="18sp"
        android:layout_alignTop="@+id/tvSingleHelp"
        android:layout_alignBottom="@+id/tvSingleHelp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radioGroup"
        android:text="Rules: "
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:typeface="normal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorAccent" />

    <TextView
        android:text="Point Values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/tvSingleHelp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:typeface="normal"
        android:textColor="@color/colorAccent" />

    <TextView
        android:text="@string/help_scoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:textSize="18sp"
        android:id="@+id/tvScoring" />


</RelativeLayout>
